--- a/corate/index.html
+++ b/corate/index.html
@@ -123,28 +123,27 @@
 <p>The genesis of CoRate took place in a hackathon. Here is a list of unofficial FAQs:</p>
 
 <ul>
-  <li>Why CoRate? Why not just use the built-in rating system on the site that I am visiting?</li>
+  <li>
+    <p>Why CoRate? Why not just use the built-in rating system on the site that I am visiting?</p>
+
+    <p>Not all sites have rating system. Personally, I think rating system might hurt the web site especially those famous sites that are surviving on their fame, not the quality of content.</p>
+  </li>
+  <li>
+    <p>Why should I rate? I am wasting my 2 seconds.</p>
+
+    <p>True, rating a site takes about 2 seconds. We will never force our user to rate, but CoRate is an collaborative effort of the community of users. Each rating counts, and the average will be shown to the next visitors so that they have an rough idea on the quality of the site that they are visiting right now.</p>
+  </li>
+  <li>
+    <p>Does frequently rating on sites mean that my browsing behaviour will be known?</p>
+
+    <p>Theoretically, yes. But it is impossible on CoRate. Take a look at <a href="http://www.corate.us/data_collection.html">how we collect data</a>.</p>
+  </li>
+  <li>
+    <p>Why Chrome extension?</p>
+
+    <p>It is one of the rules of the hackathon.</p>
+  </li>
 </ul>
-
-<p>Not all sites have rating system. Personally, I think rating system might hurt the web site especially those famous sites that are surviving on their fame, not the quality of content.</p>
-
-<ul>
-  <li>Why should I rate? I am wasting my 2 seconds.</li>
-</ul>
-
-<p>True, rating a site takes about 2 seconds. We will never force our user to rate, but CoRate is an collaborative effort of the community of users. Each rating counts, and the average will be shown to the next visitors so that they have an rough idea on the quality of the site that they are visiting right now.</p>
-
-<ul>
-  <li>Does frequently rating on sites mean that my browsing behaviour will be known?</li>
-</ul>
-
-<p>Theoretically, yes. But it is impossible on CoRate. Take a look at <a href="http://www.corate.us/data_collection.html">how we collect data</a>.</p>
-
-<ul>
-  <li>Why Chrome extension?</li>
-</ul>
-
-<p>It is one of the rules of the hackathon.</p>
 
 <p>Please take a look at <a href="http://goo.gl/fMifL">CoRate</a>.</p>
 
