--- a/cloud-ide-iii-koding/index.html
+++ b/cloud-ide-iii-koding/index.html
@@ -121,15 +121,15 @@
     <div class="article-wrap">
       <p><a href="https://koding.com/">Koding</a> is a very interesting platform due to the fact that it has a Facebook-like newsfeed where all members of Koding get to communicate with each other. The employees of Koding use the newsfeed to announce updates and people will post their feedbacks there. It is a very engaging community. It was quite difficult to get started writing the review for Koding as there are too many updates very quickly. Whenever I started a draft and continue maybe a day or two later, some of the things that I complaint already become irrelevant.</p>
 
-<h2 id="pricing">Pricing</h2>
+<p>##Pricing</p>
 
 <p>The first instance of virtual machine is free of charge, each subsequent VM costs $5 per month. The exact specification of each instance is not known, but from what I can see and feel, $5 is very very reasonable.</p>
 
-<h2 id="virtual-machine">Virtual Machine</h2>
+<p>##Virtual Machine</p>
 
 <p>There is nothing to say much about the VMs - users have <code>sudo</code> access on their VMs. In other word, there is no language that has a compiler/interpreter for Linux is not supported in Koding. More precisely, the VMs are running Ubuntu 13.04, just get a compiler/interpreter for Ubuntu 13.04 and any exotic language of your choice is working on Koding. However, as I’ve mentioned in the <a href="http://www.yihangho.com/cloud-ide-ii-nitrous-io/">review</a> for <a href="https://www.nitrous.io/join/_5GqfzMZwkM">Nitrous.IO</a>, the terminal of Koding is quite laggy possibly due to network latency. As such, using Vim in Koding won’t be a pleasurable experience.</p>
 
-<h2 id="overall-experience">Overall Experience</h2>
+<p>##Overall Experience</p>
 
 <p>Koding is supposed to be the most powerful IDE among the IDEs that I am reviewing. However, the overall experience is not excellent. Somehow the whole UI is not very responsive and the VM disconnects quite frequently.</p>
 
@@ -179,7 +179,7 @@
     <hr />
   </div><!-- /.related-articles -->
   <footer>
-    <span>&copy; 2014 Yihang Ho. Powered by <a href="http://jekyllrb.com">Jekyll</a> using the <a href="http://mademistakes.com/minimal-mistakes/">Minimal Mistakes</a> theme.</span>
+    <span>&copy; 2013 - 2015 Yihang Ho. Powered by <a href="http://jekyllrb.com">Jekyll</a> using the <a href="http://mademistakes.com/minimal-mistakes/">Minimal Mistakes</a> theme.</span>
 
   </footer>
 </div><!-- /.footer-wrap -->
