--- a/homebrew-and-truecrypt/index.html
+++ b/homebrew-and-truecrypt/index.html
@@ -151,7 +151,7 @@ Unexpected .pc files:
 
 <p>For example,</p>
 
-<div><div class="CodeRay">
+<div class="highlighter-coderay"><div class="CodeRay">
   <div class="code"><pre><span class="line-numbers"><a href="#n1" name="n1">1</a></span>$ mv /usr/local/lib/libmacfuse_i32.2.dylib /Applications/TrueCrypt.app/Contents/Resources/Library/libmacfuse_i32.2.dylib
 <span class="line-numbers"><a href="#n2" name="n2">2</a></span>$ ln -s /Applications/TrueCrypt.app/Contents/Resources/Library/libmacfuse_i32.2.dylib /usr/local/lib/libmacfuse_i32.2.dylib
 </pre></div>
@@ -209,7 +209,7 @@ Unexpected .pc files:
     <hr />
   </div><!-- /.related-articles -->
   <footer>
-    <span>&copy; 2014 Yihang Ho. Powered by <a href="http://jekyllrb.com">Jekyll</a> using the <a href="http://mademistakes.com/minimal-mistakes/">Minimal Mistakes</a> theme.</span>
+    <span>&copy; 2013 - 2015 Yihang Ho. Powered by <a href="http://jekyllrb.com">Jekyll</a> using the <a href="http://mademistakes.com/minimal-mistakes/">Minimal Mistakes</a> theme.</span>
 
   </footer>
 </div><!-- /.footer-wrap -->
