--- a/how-to-run-rails-server-in-the-background-quietly/index.html
+++ b/how-to-run-rails-server-in-the-background-quietly/index.html
@@ -121,7 +121,7 @@
     <div class="article-wrap">
       <p>Usually, I’d want the Rails server to run in the background as I do Ruby on Rails coding so that I can test out the latest code easily. This is what I do:</p>
 
-<div><div class="CodeRay">
+<div class="highlighter-coderay"><div class="CodeRay">
   <div class="code"><pre><span class="line-numbers"><a href="#n1" name="n1">1</a></span>$ rails s &amp;
 </pre></div>
 </div>
@@ -129,7 +129,7 @@
 
 <p>This command starts the Rails server in the background. However, after each request, it will print a lot of stuff and I have to press Enter to continue on my terminal. Well, this is not a big deal, but I don’t like it. So this is my solution:</p>
 
-<div><div class="CodeRay">
+<div class="highlighter-coderay"><div class="CodeRay">
   <div class="code"><pre><span class="line-numbers"><a href="#n1" name="n1">1</a></span>$ rails s &gt; /dev/null &amp;
 </pre></div>
 </div>
@@ -186,7 +186,7 @@
     <hr />
   </div><!-- /.related-articles -->
   <footer>
-    <span>&copy; 2014 Yihang Ho. Powered by <a href="http://jekyllrb.com">Jekyll</a> using the <a href="http://mademistakes.com/minimal-mistakes/">Minimal Mistakes</a> theme.</span>
+    <span>&copy; 2013 - 2015 Yihang Ho. Powered by <a href="http://jekyllrb.com">Jekyll</a> using the <a href="http://mademistakes.com/minimal-mistakes/">Minimal Mistakes</a> theme.</span>
 
   </footer>
 </div><!-- /.footer-wrap -->
