--- a/migrating-from-wordpress-to-jekyll/index.html
+++ b/migrating-from-wordpress-to-jekyll/index.html
@@ -146,7 +146,7 @@ RewriteRule ^$ http://www.example.com/redirect.php
 
 <p>Next, we need to prepare <code>redirect.php</code> to redirect the user to the correct location.</p>
 
-<div><div class="CodeRay">
+<div class="highlighter-coderay"><div class="CodeRay">
   <div class="code"><pre><span class="line-numbers"> <a href="#n1" name="n1">1</a></span><span style="font-weight:bold;color:#666">&lt;?php</span>
 <span class="line-numbers"> <a href="#n2" name="n2">2</a></span><span style="color:#777">//$redirect_map should contain all the new permalinks such that</span>
 <span class="line-numbers"> <a href="#n3" name="n3">3</a></span><span style="color:#777">//$redirect_map[old_perma] = new_perma</span>
@@ -216,7 +216,7 @@ RewriteRule ^$ http://www.example.com/redirect.php
     <hr />
   </div><!-- /.related-articles -->
   <footer>
-    <span>&copy; 2014 Yihang Ho. Powered by <a href="http://jekyllrb.com">Jekyll</a> using the <a href="http://mademistakes.com/minimal-mistakes/">Minimal Mistakes</a> theme.</span>
+    <span>&copy; 2013 - 2015 Yihang Ho. Powered by <a href="http://jekyllrb.com">Jekyll</a> using the <a href="http://mademistakes.com/minimal-mistakes/">Minimal Mistakes</a> theme.</span>
 
   </footer>
 </div><!-- /.footer-wrap -->
