--- a/ruboto/index.html
+++ b/ruboto/index.html
@@ -140,7 +140,7 @@
 <h2 id="create-an-app">Create an app</h2>
 <p>Ruboto comes with a code generator. Run</p>
 
-<div><div class="CodeRay">
+<div class="highlighter-coderay"><div class="CodeRay">
   <div class="code"><pre><span class="line-numbers"><a href="#n1" name="n1">1</a></span>ruboto gen app --package com.example.test --name test --target android-19
 <span class="line-numbers"><a href="#n2" name="n2">2</a></span>cd test
 <span class="line-numbers"><a href="#n3" name="n3">3</a></span>rake
@@ -202,7 +202,7 @@
     <hr />
   </div><!-- /.related-articles -->
   <footer>
-    <span>&copy; 2014 Yihang Ho. Powered by <a href="http://jekyllrb.com">Jekyll</a> using the <a href="http://mademistakes.com/minimal-mistakes/">Minimal Mistakes</a> theme.</span>
+    <span>&copy; 2013 - 2015 Yihang Ho. Powered by <a href="http://jekyllrb.com">Jekyll</a> using the <a href="http://mademistakes.com/minimal-mistakes/">Minimal Mistakes</a> theme.</span>
 
   </footer>
 </div><!-- /.footer-wrap -->
