--- a/homebrew-and-clamxav/index.html
+++ b/homebrew-and-clamxav/index.html
@@ -142,7 +142,7 @@ back to your user account.
 
 <p>If so, just enter the following command and you’re (most likely) good to go.</p>
 
-<div><div class="CodeRay">
+<div class="highlighter-coderay"><div class="CodeRay">
   <div class="code"><pre><span class="line-numbers"><a href="#n1" name="n1">1</a></span>sudo chown `whoami` /usr/local
 </pre></div>
 </div>
@@ -150,7 +150,7 @@ back to your user account.
 
 <p>If you have installed ClamXav and Homebrew some time ago, and ClamXav stops updating, you should continue reading. As we know, ClamXav updates its virus definition every time it is started, but this time, when it is started, <em>very</em> quickly it says that update completed, but when you run some scans, it complains that virus definition is outdated. In short, ClamXav refuses to update yet it complains that it is outdated. This problem is very likely due to permission issue on <code>/usr/local/clamXav</code>. This directory should be owned by <code>root</code>. Maybe you accidentally <code>chown</code>ed that folder when you attempt to fix some other permission issues. To fix this,</p>
 
-<div><div class="CodeRay">
+<div class="highlighter-coderay"><div class="CodeRay">
   <div class="code"><pre><span class="line-numbers"><a href="#n1" name="n1">1</a></span>sudo chown root /usr/local/clamXav
 </pre></div>
 </div>
@@ -202,7 +202,7 @@ back to your user account.
     <hr />
   </div><!-- /.related-articles -->
   <footer>
-    <span>&copy; 2014 Yihang Ho. Powered by <a href="http://jekyllrb.com">Jekyll</a> using the <a href="http://mademistakes.com/minimal-mistakes/">Minimal Mistakes</a> theme.</span>
+    <span>&copy; 2013 - 2015 Yihang Ho. Powered by <a href="http://jekyllrb.com">Jekyll</a> using the <a href="http://mademistakes.com/minimal-mistakes/">Minimal Mistakes</a> theme.</span>
 
   </footer>
 </div><!-- /.footer-wrap -->
